@@ -2,7 +2,8 @@
 
 # Makefile macros
 ARCH=arm
-CROSS_COMPILE=/usr/arm-linux/gcc-3.4.1-glibc-2.3.3/bin/arm-linux-
+#CROSS_COMPILE=/usr/arm-linux/gcc-3.4.1-glibc-2.3.3/bin/arm-linux-
+CROSS_COMPILE=/usr/arm-linux/gcc-2.95.3-glibc-2.2.2/bin/arm-linux-
 
 CONFIG_ARCH=arm
 CONFIG_MACH=lh7952x
